<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil.Perfil_Usuario">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--PORTADA - IMAGEN DE PERFIL-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!--PORTADA-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/portada"/>

            <!--IMAGEN DE PERFIL-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Imagen_Perfil"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="#354f60"
                android:layout_marginTop="120dp"
                android:layout_marginStart="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/amongus_de_porcelana"/>

        </RelativeLayout>

        <!--DATOS DEL USUARIO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--CORREO-->
            <TextView
                android:id="@+id/Correo_Perfil"
                android:text="@string/Correo_Perfil"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/worksans"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <!--UID-->
            <TextView
                android:id="@+id/Uid_Perfil"
                android:text="@string/Uid_Perfil"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:drawableStart="@drawable/icono_uid_perfil_usuario"
                android:drawablePadding="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--NOMBRES-->
            <EditText
                android:id="@+id/Nombres_Perfil"
                android:hint="@string/Nombres_Perfil"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--APELLIDOS-->
            <EditText
                android:id="@+id/Apellidos_Perfil"
                android:hint="@string/Apellidos_Perfil"
                android:inputType="textPersonName"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--EDAD-->
            <EditText
                android:id="@+id/Edad_Perfil"
                android:hint="@string/Edad_Perfil"
                android:inputType="number"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--TELEFONO-->
            <EditText
                android:id="@+id/Telefono_Perfil"
                android:hint="@string/Telefono_Perfil"
                android:inputType="phone"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--DOMICILIO-->
            <EditText
                android:id="@+id/Domicilio_Perfil"
                android:hint="@string/Domicilio_Perfil"
                android:inputType="text"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--UNIVERSIDAD-->
            <EditText
                android:id="@+id/Universidad_Perfil"
                android:hint="@string/Universidad_Perfil"
                android:inputType="text"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--PROFESION-->
            <EditText
                android:id="@+id/Profesion_Perfil"
                android:hint="@string/Profesion_Perfil"
                android:inputType="text"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--GUARDAR DATOS-->
            <Button
                android:id="@+id/Guardar_Datos"
                android:text="@string/Guardar_Datos"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>